--- a/public/sites/all/themes/gesso/sass/partials/components/_messages.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_messages.scss
@@ -3,27 +3,27 @@
 
 .messages {
   font-size: em($font-size-md);
-  background-position: ($base-spacing / 2) ($base-spacing / 2); // LTR
+  background-position: 0.75em 0.75em; // LTR
   background-repeat: no-repeat;
   border-radius: 5px;
   border-style: solid;
   border-width: 4px 1px;
-  margin: $base-spacing 0;
-  padding: ($base-spacing / 2) ($base-spacing / 2) ($base-spacing / 2) ($base-spacing * 2); // LTR
+  margin: 1.5em 0;
+  padding: 0.75em 0.75em 0.75em 3em; // LTR
   position: relative;
   word-wrap: break-word;
 
   [dir="rtl"] & {
     background-position: 98.5% 50%;
-    padding: ($base-spacing / 2) ($base-spacing * 2) ($base-spacing / 2) ($base-spacing / 2);
+    padding: 0.75em 3em 0.75em 0.75em;
   }
 
   @media print {
     background-image: none !important;
-    padding-left: ($base-spacing / 2); // LTR
+    padding-left: 0.75em; // LTR
 
     [dir="rtl"] & {
-      padding-right: ($base-spacing / 2);
+      padding-right: 0.75em;
     }
   }
 
@@ -36,7 +36,7 @@
   margin: 0;
 
   > li + li {
-    margin-top: ($base-spacing / 2);
+    margin-top: 0.75em;
   }
 }
 
