--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_lists.scss
@@ -51,9 +51,9 @@ ul {
       float: left;
       font-size: 2em;
       left: -1em;
-      padding: .25em .5em;
+      padding: 0 .5em;
       position: absolute;
-      top: 0;
+      top: -5px;
     }
   }
 }
