--- a/public/sites/all/themes/gesso_longform/sass/partials/global/extendables/_button.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/extendables/_button.scss
@@ -11,8 +11,8 @@
   font-family: $base-font-family;
   font-size: $font-size;
   font-weight: normal;
-  line-height: $base-spacing;
-  margin: 0 0 $base-spacing;
+  line-height: $base-line-height;
+  margin: 0 0 1.5em;
   padding: 0.5em 1.75em;
   text-align: center;
   text-decoration: none;
