--- a/public/sites/all/themes/gesso/sass/partials/components/_fieldset.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_fieldset.scss
@@ -4,7 +4,7 @@
 .fieldset {
   background: #fff;
   border: 1px solid $form-border-color;
-  margin: $base-spacing 0 $base-spacing + em(12px);
+  margin: 1.5em 0 1.5em + em(12px);
   padding: 0 1em;
   position: relative;
   top: em(12px); // Offsets the negative margin of legends.
@@ -43,7 +43,7 @@
 
 .fieldset__description {
   font-style: italic;
-  margin: $base-spacing 0;
+  margin: 1.5em 0;
 }
 
 .fieldset--collapsible {
@@ -58,7 +58,7 @@
     border-bottom-width: 0;
     border-left-width: 0;
     border-right-width: 0;
-    margin-bottom: ($base-spacing * 2) + em(12px);
+    margin-bottom: 3em + em(12px);
 
     .fieldset__legend {
       border-bottom: 1px solid $form-border-color;
