--- a/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
@@ -66,11 +66,11 @@
 }
 
 .form-item--password-confirm-pass-1 {
-  margin-bottom: ($base-spacing / 2);
+  margin-bottom: 0.75em;
 }
 
 .form-item--password-confirm-pass-2 {
-  margin: ($base-spacing / 2) 0;
+  margin: 0.75em 0;
 }
 
 .form-select,
