--- a/public/sites/all/themes/gesso/sass/partials/components/_views-widget.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_views-widget.scss
@@ -4,7 +4,7 @@
 $bp-inline-widgets: 300px, 'no-query' true;
 
 .views-widget {
-  margin: 0 0 $base-spacing 0;
+  margin: 0 0 1.5em 0;
   max-width: 100%;
 
   @include breakpoint($bp-inline-widgets) {
