--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_typography.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_typography.scss
@@ -5,7 +5,7 @@
 $base-font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $header-font-family: $base-font-family;
 $monospace-font-family: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;
-$base-spacing: 1.625em;
+$base-line-height: 1.625;
 $base-font-size: 16px;
 $font-size-xxxl: 32px;
 $font-size-xxl: 24px;
