--- a/public/sites/all/themes/gesso_longform/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/base/_html-elements.scss
@@ -54,7 +54,7 @@ audio {}
 b {}
 
 blockquote {
-  margin: 0 1.5em $base-spacing;
+  margin: 0 1.5em 1.5em;
   border-top:1px solid $red;
   border-bottom:1px solid $red;
   color:$lightred;
@@ -119,7 +119,7 @@ colgroup {}
 datalist {}
 
 dd {
-  margin-bottom: $base-spacing;
+  margin-bottom: 1.5em;
 }
 
 del {}
@@ -131,7 +131,7 @@ dfn {
 }
 
 dl {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
 }
 
 dt {}
@@ -145,7 +145,7 @@ fieldset {}
 figcaption {}
 
 figure {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
 }
 
 footer {}
@@ -187,7 +187,7 @@ h3 {
 h4 {
   @extend %hN;
   font-size: em($font-size-sm);
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
   background-color: $red;
   color: $white;
   display: inline-block;
@@ -204,13 +204,13 @@ h4 {
 h5 {
   @extend %hN;
   font-size: em($font-size-md);
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
 }
 
 h6 {
   @extend %hN;
   font-size: em($font-size-sm);
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
 }
 
 header {}
@@ -219,7 +219,7 @@ hr {
   box-sizing: content-box;
   border: 1px solid $form-border-color;
   height: 0;
-  margin: $base-spacing 0;
+  margin: 1.5em 0;
   padding-bottom: -1px;
 }
 
@@ -227,7 +227,7 @@ html {
   font-family: $base-font-family;
   font-size: 100% * ($base-font-size / 16px);
   hyphens: auto;
-  line-height: $base-spacing;
+  line-height: $base-line-height;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -318,7 +318,7 @@ nav {}
 object {}
 
 ol {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
   padding: 0 0 0 1.5em; // LTR
 
   [dir="rtl"] & {
@@ -339,13 +339,13 @@ option {}
 output {}
 
 p {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
 }
 
 param {}
 
 pre {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
   overflow: auto;
   @if support-legacy-browser('ie', '6', '7') {
     white-space: pre;
@@ -408,7 +408,7 @@ tr {}
 u {}
 
 ul {
-  margin: 0 0 $base-spacing;
+  margin: 0 0 1.5em;
   padding: 0 0 0 1.2em; // LTR
   [dir="rtl"] & {
     padding: 0 1.2em 0 0;
