--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_form-item.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_form-item.scss
@@ -2,7 +2,7 @@
 // Styles for form items.
 
 .form-item {
-  margin: $base-spacing 0;
+  margin: 1.5em 0;
 }
 
 .form-item__label {
@@ -50,11 +50,11 @@
 }
 
 .form-item--password-confirm-pass-1 {
-  margin-bottom: ($base-spacing / 2);
+  margin-bottom: 0.75em;
 }
 
 .form-item--password-confirm-pass-2 {
-  margin: ($base-spacing / 2) 0;
+  margin: 0.75em 0;
 }
 
 .form-select,
