--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_tabledrag.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_tabledrag.scss
@@ -12,7 +12,7 @@
     @include svg-background(draggable);
     background-position: 0 50%;
     background-repeat: no-repeat;
-    height: $base-spacing;
+    height: 1.5em;
     min-height: 16px;
     min-width: 16px;
     width: 1em;
