--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
@@ -28,7 +28,7 @@
 }
 
 .mobile-menu__button {
-  background-color: $lightred;
+  background-color: $red;
   border: 0;
   border-radius: 0;
   box-shadow: none;
