--- a/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_colors.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_colors.scss
@@ -7,7 +7,6 @@ $lightblue: #1974b8;
 $orange: #dc5606;
 $lightorange: #ed7d3a;
 $red: #d31145;
-$lightred: #ff1352;
 $grey: #4d4d4f;
 $lightgrey: #dcddde;
 $white: #FFF;
@@ -16,8 +15,8 @@ $primary-text-color: #565a5c;
 $secondary-text-color: #666;
 $heading-text-color: $primary-text-color;
 $body-color: #fff;
-$link-color: $orange;
-$link-hover-color: darken($orange,10%);
+$link-color: $lightblue;
+$link-hover-color: darken($lightblue,10%);
 $selection-background: blue;
 $selection-foreground: #fff;
 $status-color: #4d8e4d;
