--- a/public/sites/all/themes/gesso_longform/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/base/_html-elements.scss
@@ -57,7 +57,7 @@ blockquote {
   margin: 0 1.5em 1.5em;
   border-top:1px solid $red;
   border-bottom:1px solid $red;
-  color:$lightred;
+  color:$red;
   display: block;
   font-size: $font-size-lg;
   font-style: italic;
@@ -226,7 +226,7 @@ hr {
 html {
   font-family: $base-font-family;
   font-size: 100% * ($base-font-size / 16px);
-  hyphens: auto;
+  hyphens: none;
   line-height: $base-line-height;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
