--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_text-block.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_text-block.scss
@@ -1,6 +1,62 @@
 // @file
 // Styles for the longform text block.
+$ol-bullet-size: 60px;
 
 .text-block {
 	padding: 0 1em;
+
+  ol {
+    margin-left: $ol-bullet-size;
+    padding-left: 0;
+    counter-reset: li-counter;
+    list-style-type: none;
+    li {
+      margin-bottom: 1em;
+      min-height: $ol-bullet-size * 1.20;
+      padding-left: 1em;
+      position: relative;
+      ol {
+        padding-top: $ol-bullet-size;
+      }
+    }
+    li:before {
+      background-color: $blue;
+      color: $white;
+      content: counter(li-counter);
+      counter-increment: li-counter;
+      display: block;
+      float: left;
+      font-size: 1.5em;
+      left: (-$ol-bullet-size);
+      line-height: $ol-bullet-size;
+      height: $ol-bullet-size;
+      position: absolute;
+      text-align: center;
+      top: 0;
+      width: $ol-bullet-size;
+    }
+  }
+ 
+
+  ul {
+    list-style: outside;
+    list-style-type: none;
+    li {
+      padding: .5em 0 1em 2em;
+      text-align: left;
+      position: relative;
+    }
+    li:before {
+      content: "► ";
+      color: $red;
+      display: block;
+      float: left;
+      font-size: 2em;
+      left: -1em;
+      padding: 0 .5em;
+      position: absolute;
+      top: -5px;
+    }
+  }
+ 
 }
