--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
@@ -3,6 +3,9 @@
 // palette1
 $microsite-palette1-primary: #00498f;
 $microsite-palette1-secondary: #cd1041;
+$microsite-palette1-tertiary: #cd1041;
+$microsite-palette1-light-gray: #cd1041;
+$microsite-palette1-dark-gray: #cd1041;
 $microsite-palette1-header: #035b94;
 $microsite-palette1-site-header: #565a5c;
 $microsite-palette1-main-menu: #00498f;
@@ -10,6 +13,9 @@ $microsite-palette1-main-menu: #00498f;
 // palette2
 $microsite-palette2-primary: #cd1041;
 $microsite-palette2-secondary: #faa74a;
+$microsite-palette1-tertiary: #faa74a;
+$microsite-palette1-light-gray: #faa74a;
+$microsite-palette1-dark-gray: #faa74a;
 $microsite-palette2-header: #0094b4;
 $microsite-palette2-site-header: #0094b4;
 $microsite-palette2-main-menu: #444545;
