styling for 50-50 boxes and color palettes

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/microsite-page@inprogress.mustache
@@ -7,8 +7,11 @@
      {{> molecules-microsite-header }}
      {{> molecules-microsite-text-centered }}
      {{> molecules-microsite-break }}
-     {{> molecules-microsite-50-50 }}
-     {{> molecules-microsite-50-50-reversed }}
+     {{> molecules-microsite-50-50(color: "microsite-primary") }}
+     {{> molecules-microsite-50-50(class: "microsite-50-50--reversed", color: "microsite-secondary") }}
+     {{> molecules-microsite-50-50(color: "microsite-tertiary") }}
+     {{> molecules-microsite-50-50(class: "microsite-50-50--reversed", color: "microsite-light-gray") }} 
+     {{> molecules-microsite-50-50(color: "microsite-dark-gray") }}
      {{> molecules-microsite-callout-card-3-cols }}
      {{> molecules-microsite-featured }}
 
