--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-break.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-break.scss
@@ -7,12 +7,14 @@ $section-break-image-height: 500px;
 
 .microsite-break {
   @extend %microsite-component;
-  .microsite-palette1 & {
-    background-color: $microsite-palette1-primary;
+
+  @each $current-color in $microsite-primary-list {
+    $i: index($microsite-primary-list, $current-color);
+    .microsite-palette#{$i} & { // body class
+      background-color: $current-color;
+    }
   }
-  .microsite-palette2 & {
-    background-color: $microsite-palette2-primary;
-  }
+
   background-position: 50% 50%;
   background-size: cover;
   min-height: $section-break-image-height * 0.5;
@@ -75,12 +77,14 @@ $section-break-image-height: 500px;
   vertical-align: middle;
   width: 100%;
   &:before {
-    .microsite-palette1 & {
-      border-top: 4px solid $microsite-palette1-secondary;
+    
+    @each $current-color in $microsite-secondary-list {
+      $i: index($microsite-secondary-list, $current-color);
+      .microsite-palette#{$i} & { // body class
+        border-top: 4px solid $current-color;
+      }
     }
-    .microsite-palette2 & {
-      border-top: 4px solid $microsite-palette2-secondary;
-    }
+
     content: "";
     display: block;
     margin: 0 auto 0.5em auto;
