--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
@@ -28,12 +28,14 @@ $ol-bullet-size: 60px;
       }
     }
     > li:before {
-      .microsite-palette1 & {
-        background-color: $microsite-palette1-primary;
+      
+      @each $current-color in $microsite-primary-list {
+        $i: index($microsite-primary-list, $current-color);
+        .microsite-palette#{$i} & { // body class
+          background-color: $current-color;
+        }
       }
-      .microsite-palette2 & {
-        background-color: $microsite-palette2-primary;
-      }
+
       color: #fff;
       content: counter(li-counter);
       counter-increment: li-counter;
@@ -74,13 +76,14 @@ $ol-bullet-size: 60px;
       padding: 0;
     }
     > li:before {
+
+      @each $current-color in $microsite-secondary-list {
+        $i: index($microsite-secondary-list, $current-color);
+        .microsite-palette#{$i} & { // body class
+          color: $current-color;
+        }
+      }
       content: "►";
-      .microsite-palette1 & {
-        color: $microsite-palette1-secondary;
-      }
-      .microsite-palette2 & {
-        color: $microsite-palette2-secondary;
-      }
       display: inline-block;
       margin-left: -21px;
       margin-right: 10px;
