--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--menu-menu-sub-footer-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--menu-menu-sub-footer-menu.scss
@@ -8,19 +8,18 @@
     .nav__item {}
 
     .nav__link {
-      font-weight: normal;
-      .microsite-palette1 & {
-        &:hover,
-        &:focus {
-          color: darken($microsite-palette1-primary,20%);
+      
+      @each $current-color in $microsite-primary-list {
+        $i: index($microsite-primary-list, $current-color);
+        .microsite-palette#{$i} & { // body class
+          &:hover,
+          &:focus {
+            color: darken($current-color,20%);
+          }
         }
       }
-      .microsite-palette2 & {
-        &:hover,
-        &:focus {
-          color: darken($microsite-palette2-primary,20%);
-        }
-      }
+      
+      font-weight: normal;      
     }
 
     .footer-simple & {
