--- a/public/sites/all/themes/gesso/sass/partials/components/view/_view--microsite-description.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/view/_view--microsite-description.scss
@@ -10,21 +10,18 @@
     text-transform: uppercase;
   }
   .button {
-    .microsite-palette1 & {
-      background-color: $microsite-palette1-secondary;
-      border-color: $microsite-palette1-secondary;
-      &:hover, &:focus {
-         background-color: darken($microsite-palette1-secondary, 6.9%);
-         border-color: darken($microsite-palette1-secondary, 6.9%);
+   
+    @each $current-color in $microsite-secondary-list {
+      $i: index($microsite-secondary-list, $current-color);
+      .microsite-palette#{$i} & { // body class
+        background-color: $current-color;
+        border-color: $current-color;
+        &:hover, &:focus {
+           background-color: darken($current-color, 6.9%);
+           border-color: darken($current-color, 6.9%);
+        }
       }
     }
-    .microsite-palette2 & {
-      background-color: $microsite-palette2-secondary;
-      border-color: $microsite-palette2-secondary;
-      &:hover, &:focus {
-         background-color: darken($microsite-palette2-secondary, 6.9%);
-         border-color: darken($microsite-palette2-secondary, 6.9%);
-      }
-    }
+
   }
 }
