adjusted PL for microsites

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/03-microsite-callout-card@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/03-microsite-callout-card@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <div class="microsite-callout-card">
   <div class="microsite-callout-card__inner layout-constrain">
     <a href="#" class="microsite-callout-card__card">
@@ -6,7 +7,7 @@
     </a>
   </div>
 </div>
-
+{{{ closeMicrositeWrapper }}}
 <div class="patternlab-markup">
   <strong>Microsite Callout Card Component Image Size: 150x150</strong><br>
   <strong>Microsite Callout Card Component Markup:</strong>
