--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-break@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-break@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <div class="microsite-break" style="background-image: url('../../images/section-break.jpg');">
   <div class="microsite-break__text-wrapper">
     <div class="microsite-break__text">
@@ -5,7 +6,7 @@
     </div>
   </div>
 </div>
-
+{{{ closeMicrositeWrapper }}}
 <div class="patternlab-markup">
   <strong>Microsite Section Break Component Markup:</strong>
   <xmp>
