--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-featured@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-featured@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <div class="view view--microsite-featured">
   <div class="layout-grid layout-grid--cols-4 layout-grid--microsite-featured">
     <div class="layout-grid__row">
@@ -57,7 +58,7 @@
     </div>
   </div>
 </div>
- 
+{{{ closeMicrositeWrapper }}} 
 
 <div class="patternlab-markup">
   <strong>Microsite Featured Component Image Size: 500x300</strong><br>
