--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/microsite-footer@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/microsite-footer@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <footer class="footer" role="contentinfo">
   <div class="region-footer layout-constrain">
     {{> molecules-microsite-description }}
@@ -5,3 +6,4 @@
     {{> molecules-footer-utility-menu }} 
   </div>
 </footer> 
+{{{ closeMicrositeWrapper }}}
