--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/microsite-navigation@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/00-regions/microsite-navigation@inprogress.mustache
@@ -1,6 +1,8 @@
+{{{ openMicrositeWrapper }}}
 <div class="region-navigation">
   <div class="region__inner">
     {{> molecules-microsite-logo }}
     {{> molecules-microsite-main-menu }}
   </div>
 </div>
+{{{ closeMicrositeWrapper }}}
