--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/00-microsite-header@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/00-microsite-header@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <div class="microsite-header" style="background-image: url('../../images/page-header.jpg');">
   <div class="microsite-header__text-wrapper">
     <div class="microsite-header__text">
@@ -6,7 +7,7 @@
     </div>
   </div>
 </div>
-
+{{{ closeMicrositeWrapper }}}
 <div class="patternlab-markup">
   <strong>Microsite Page Header Component Image Size: 1600x700</strong><br>
   <strong>Microsite Page Header Component Markup:</strong>
