--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-50-50@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-50-50@inprogress.mustache
@@ -1,3 +1,4 @@
+{{{ openMicrositeWrapper }}}
 <div class="microsite-50-50 {{ class }} {{ color }}">
   <div class="microsite-50-50__text">
     <h2>Promoting Positive Youth Development (PYD)</h2> 
@@ -10,7 +11,7 @@
     <img src="../../images/schnauzers-900-630.jpg">
   </div>
 </div>
-
+{{{ closeMicrositeWrapper }}}
 <div class="patternlab-markup">
   <strong>Microsite 50/50 Component Image Size: 900x600</strong><br>
   <strong>Microsite 50/50 Component Markup:</strong><br>
