styling for microsite highlight component

--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
@@ -7,22 +7,22 @@
     flex-direction: row;
     justify-content: center;
   }
-  background: nth($microsite-primary-list, 1); // just in case palette or color class is missing
+  background-color: nth($microsite-primary-list, 1); // just in case palette or color class is missing
   @each $current-color in $microsite-primary-list {
     $i: index($microsite-primary-list, $current-color);
     .microsite-palette#{$i} & { // body class
       background-color: $current-color;
       &.microsite-secondary { // component class
-        background: nth($microsite-secondary-list, $i); 
+        background-color: nth($microsite-secondary-list, $i); 
       }
       &.microsite-tertiary {
-        background: nth($microsite-tertiary-list, $i); 
+        background-color: nth($microsite-tertiary-list, $i); 
       }
       &.microsite-light-gray {
-        background: nth($microsite-light-gray-list, $i); 
+        background-color: nth($microsite-light-gray-list, $i); 
       }
       &.microsite-dark-gray {
-        background: nth($microsite-dark-gray-list, $i); 
+        background-color: nth($microsite-dark-gray-list, $i); 
       }
     }
   }
