--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/01-microsite-header-with-arrow@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/01-microsite-header-with-arrow@inprogress.mustache
@@ -1,9 +1,9 @@
 {{{ openMicrositeWrapper }}}
-<div class="microsite-header" style="background-image: url('../../images/microsite-header-bg.jpg');">
+<div class="microsite-header microsite-header--arrow" style="background-image: url('../../images/page-header.jpg');">
   <div class="microsite-header__text-wrapper">
     <div class="microsite-header__text">
-      <div class="microsite-header__subtext">About Youth Power</div>
-      <div class="microsite-header__headline">Empowering Young People to Become Agents of Their Own Development</div>
+      <div class="microsite-header__subtext">A handbook for USAID staff</div>
+      <div class="microsite-header__headline">Digital Finance for Development</div>
     </div>
   </div>
 </div>
@@ -12,7 +12,7 @@
   <strong>Microsite Page Header Component Image Size: 1600x700</strong><br>
   <strong>Microsite Page Header Component Markup:</strong>
   <xmp>
-    <div class="microsite-header" style="background-image: url([imagename].jpg);">
+    <div class="microsite-header microsite-header--arrow" style="background-image: url([imagename].jpg);">
       <div class="microsite-header__text-wrapper">
         <div class="microsite-header__text">
           <div class="microsite-header__subtext">[content]</div>
