--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-50-50@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/01-molecules/06-paragraphs/microsite-50-50@inprogress.mustache
@@ -15,7 +15,7 @@
 <div class="patternlab-markup">
   <strong>Microsite 50/50 Component Image Size: 900x600</strong><br>
   <strong>Microsite 50/50 Component Markup:</strong><br>
-  <em>Optional classes: microsite-50-50--reversed, microsite-primary, microsite-secondary, microsite-tertiary, microsite-light-gray, microsite-dark-gray</em>
+  <em>Optional classes: microsite-50-50--reversed, microsite-primary, microsite-secondary, microsite-tertiary, microsite-light-gray, microsite-dark-gray</em><br>
   <xmp>
     <div class="microsite-50-50">
       <div class="microsite-50-50__text">
