--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
@@ -9,13 +9,6 @@ $header-image-height: 700px;
   @extend %microsite-component;
   background-position: 50% 50%;
   background-size: cover;
-  @each $current-color in $microsite-secondary-list {
-    $i: index($microsite-secondary-list, $current-color);
-    .microsite-palette#{$i} & { // body class
-      border-bottom: 6px solid $current-color;
-    }
-  }
-  margin: 0 auto 5em auto;
   min-height: $header-image-height * 0.5;
   @include breakpoint($header-image-width * 0.6) {
     min-height: $header-image-height * 0.6;
@@ -36,6 +29,16 @@ $header-image-height: 700px;
   position: relative;
   text-align: center;
   width: 100%;
+}
+
+.microsite-header--arrow {
+  @each $current-color in $microsite-secondary-list {
+    $i: index($microsite-secondary-list, $current-color);
+    .microsite-palette#{$i} & { // body class
+      border-bottom: 6px solid $current-color;
+    }
+  }
+  margin: 0 auto 5em auto;
   &:after {
     @each $current-color in $microsite-secondary-list {
       $i: index($microsite-secondary-list, $current-color);
