--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--landing-intro.scss
@@ -32,7 +32,13 @@
     bottom: -14px;
     border-color: $lightorange transparent transparent transparent;
     .section-wanteds & { // blue header
-      border-color: #00729c transparent transparent transparent;
+      border-color: $wanted-section-color transparent transparent transparent;
+    }
+    @each $current-color in $microsite-primary-list {
+      $i: index($microsite-primary-list, $current-color);
+      .microsite-palette#{$i} & { // body class
+        border-color: $current-color transparent transparent transparent;
+      }
     }
     height: 0;
     left: 28px;
@@ -68,8 +74,7 @@
     @include breakpoint(500px, $no-query: true) { // don't show icon until 500px
       padding-left: 49px; // icon width + 15
       margin-bottom: 25px;
-    } 
-    
+    }  
     &:before {
       @include svg-background(icon-innovations-34-46-white);
       width: 34px;
