more dashboard styling

--- a/public/sites/all/themes/gesso/sass/partials/components/_quicktabs-container-dashboard.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_quicktabs-container-dashboard.scss
@@ -3,6 +3,6 @@
 #quicktabs-container-dashboard {
   > .quicktabs-tabpage {
     background: #f6f6f6;
-    padding: 1em;
+    padding: 1em 2em;
   } 
 }
